--- a/css/theme.css
+++ b/css/theme.css
@@ -285,3 +285,13 @@ body {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+
+.grid {
+  display: table;
+  width: 100%; }
+  .grid.grid-fixed {
+    table-layout: fixed; }
+  .grid .row {
+    display: table-row; }
+  .grid .col {
+    display: table-cell; }
